update calculator - refactor index.js file - remove reverse button from index.html file - increment margin-top for calculator

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button class="teal">÷</button>
           <button>0</button>
           <button class="teal">.</button>
-          <button class="teal">⮌</button>
+          <button class="teal"></button>
           <button class="teal">=</button>
       </div>
     </div>
