configure/set up PWA

--- a/index.html
+++ b/index.html
@@ -32,5 +32,12 @@
       </div>
     </div>
     <script src="./index.js"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
   </body>
 </html>
