update manifest path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Awesome Calculator</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="./assets/icon-192.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
